--- a/chat_app/lib/chat_app_web/components/layouts/app.html.heex
+++ b/chat_app/lib/chat_app_web/components/layouts/app.html.heex
@@ -24,9 +24,7 @@
     </div>
   </div>
 </header>
-<main class="px-4 py-20 sm:px-6 lg:px-8">
-  <div class="mx-auto max-w-2xl">
-    <.flash_group flash={@flash} />
-    {@inner_content}
-  </div>
+<main class="container mx-auto px-4 py-8">
+  <.flash_group flash={@flash} />
+  <%= @inner_content %>
 </main>
